[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/themes/theme0.tres" type="Theme" id=1]
[ext_resource path="res://resources/themes/label_opaque.tres" type="StyleBox" id=2]
[ext_resource path="res://scripts/dream_diary.gd" type="Script" id=3]
[ext_resource path="res://resources/fonts/regular_big1.tres" type="DynamicFont" id=4]

[node name="dream_diary" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="."]
margin_left = 558.0
margin_top = 212.0
margin_right = 1306.0
margin_bottom = 891.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="diary_label" type="Label" parent="."]
margin_left = 577.0
margin_top = 230.0
margin_right = 926.0
margin_bottom = 275.0
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "dream diary"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="counter_label" type="Label" parent="."]
margin_left = 948.0
margin_top = 230.0
margin_right = 1285.0
margin_bottom = 275.0
custom_styles/normal = ExtResource( 2 )
text = "0/0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scrollbox" type="ScrollContainer" parent="."]
margin_left = 577.0
margin_top = 294.0
margin_right = 1289.0
margin_bottom = 812.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="scrollbox"]

[node name="save_button" type="Button" parent="."]
margin_left = 577.0
margin_top = 830.811
margin_right = 926.0
margin_bottom = 871.811
text = "update diary"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="undo_button" type="Button" parent="."]
margin_left = 948.0
margin_top = 830.811
margin_right = 1285.0
margin_bottom = 871.811
text = "undo changes"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="save_button" to="." method="_save_list"]
[connection signal="pressed" from="undo_button" to="." method="_reset_list"]
